# projects

./: .gitignore  README.md  app.py  customer.py  mo.py  movie_reco.html  pyproject.toml  requirements.txt
.ipynb_checkpoints/: Untitled-checkpoint.ipynb  forca-checkpoint.ipynb  rfm_kmeans-checkpoint.ipynb
MD/Recommender System/: Recommender System.md
MD/Sentiment Analysis/: Sentiment Analysis.md
movie_reco/: movie_reco.ipynb  readme.md
movie_reco/.ipynb_checkpoints/: movie_reco-checkpoint.ipynb
news_topic/: readme.md
news_topic/.ipynb_checkpoints/: news_topic-checkpoint.ipynb
py/: news_topic.py  rec_pro.py  rfm_case.py  rfm_kmeans.ipynb  rfm_plot.py
recom/: Recommender System.ipynb  Sentiment Analysis.ipynb
recom/.ipynb_checkpoints/: Recommender System-Copy1-checkpoint.ipynb  Recommender System-checkpoint.ipynb  Sentiment Analysis-checkpoint.ipynb
static/: cust.css  news.css
static/js/: xx.js
templates/: cus_ans.html  customer.html  home.html  index.html  mov_ans.html  mov_in.html  pro.html  pro_ans.html  rfm_kmeans.html
